# maltheron

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRACT_DEPLOY.md  CONTRIBUTING.md  DEPLOY.md  INCIDENT_RESPONSE.md  LICENSE  README.md  convex.json  package-lock.json  package.json  tsconfig.json  vercel.json
contracts/: MaltheronPaymentRouter.sol
convex/: agents.ts  auditLogs.ts  idempotency.ts  memory.ts  memorySnapshots.ts  nonces.ts  scheduler.ts  schema.ts  sessions.ts  taxes.ts  transactions.ts  webhooks.ts
convex/_generated/: api.d.ts
frontend/: index.html  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/fonts/: README.md
frontend/src/: App.tsx  index.css
frontend/src/components/: ApiPlayground.tsx  DashboardLayout.tsx  LedgerStream.tsx  MetricCard.tsx  WalletButton.tsx
frontend/src/hooks/: useAuth.tsx  useConvex.ts  useConvexRealtime.ts  useSolanaAuth.tsx  useWallet.ts
frontend/src/lib/: ConvexProvider.tsx  SolanaProvider.tsx  WalletProvider.tsx  convex.ts  siwe.ts  wagmi.ts
programs/: package.json
programs/maltheron/: Cargo.toml
programs/maltheron/src/: lib.rs
scripts/: admin-bootstrap.ts  demo-agent.ts
src/: index.ts
src/lib/: blockchain.ts  contract.ts  finance.ts  protocol.ts  rate-limit.ts  sentry.ts  solana.ts  usdc.ts
src/routes/: admin.ts  agents.ts  auth.ts  health.ts  ledger.ts  memory.ts  scheduler.ts  webhooks.ts
src/types/: index.ts
tests/e2e/: basic-flow.test.ts
tests/unit/: protocol.test.ts  rate-limit.test.ts
