[package]
name = "maltheron"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
